k8s/psql-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-client
  namespace: risingwavepoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-client
  template:
    metadata:
      labels:
        app: psql-client
    spec:
      containers:
        - name: psql
          image: postgres:15-alpine
          command: ["sleep", "infinity"]
