k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risingwavepoc-app
  namespace: risingwavepoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risingwavepoc-app
  template:
    metadata:
      labels:
        app: risingwavepoc-app
    spec:
      containers:
        - name: app
          image: risingwavepoc/app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: risingwavepoc-app
  namespace: risingwavepoc
spec:
  type: NodePort
  selector:
    app: risingwavepoc-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
