k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: risingwavepoc-gw
  namespace: risingwavepoc
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: risingwavepoc-app
  namespace: risingwavepoc
spec:
  parentRefs:
    - name: risingwavepoc-gw
  rules:
    - backendRefs:
        - name: risingwavepoc-app
          port: 8080
